--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "pino-pretty": "^11.0.0",
     "tsx": "^4.7.2",
     "typescript": "^5.9.2"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
